# word-vector-visualizer

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  tox.ini
tests/: test_main.py
vectors/: .gitignore
word_vector_visualizer/: main.py
